--- a/styles/components/_form.scss
+++ b/styles/components/_form.scss
@@ -21,7 +21,6 @@
         left: 0;
         width: 100%;
         height: 100%;
-        background-color: rgba(0, 0, 0, .5);
     }
 
     &__swipe {
@@ -30,6 +29,16 @@
         left: 0;
         width: 100%;
         height: 2rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        &:after {
+            content: '';
+            width: 2rem;
+            height: .2rem;
+            border-radius: 5rem;
+        }
     }
 
     &__wrap-form {
@@ -39,7 +48,6 @@
         width: 100%;
         height: 77vh;
         padding: 2rem;
-        background-color: #fff;
         border-top-right-radius: 2rem;
         border-top-left-radius: 2rem;
         overflow: hidden;
@@ -63,7 +71,6 @@
 
         display: grid;
         grid-template-columns: 1fr;
-        // grid-template-rows: 3rem 1fr 3rem;
         grid-template-rows: 6rem auto 1fr 3rem;
 
         &__name-submit,
@@ -103,7 +110,6 @@
             &-time {
                 margin-top: .5rem;
                 font-size: 0.9rem;
-                color: #999;
             }
         }
 
@@ -111,7 +117,6 @@
             width: 100%;
             height: 100%;
             position: relative;
-            background-color: #fff;
             padding: 2rem 0 1rem .1rem;
 
             & h2 {
@@ -134,8 +139,8 @@
                 padding: .5rem 0;
 
                 &.active .form__ingredient-chec {
-                    border: .4rem solid #fff;
-                    background-color: #403777;
+                    border-width: .4rem;
+                    border-style: solid;
                 }
 
                 &.nothing {
@@ -146,8 +151,8 @@
             &-chec {
                 width: 1.4rem;
                 height: 1.4rem;
-                border: .05rem solid rgb(226, 226, 226);
-                background-color: #fff;
+                border-width: .05rem;
+                border-style: solid;
                 border-radius: 50%;
                 margin-right: .5rem;
                 transition: all .2s ease 0s;
@@ -171,9 +176,8 @@
                 height: 100%;
                 padding: 0 2rem;
                 border-radius: 5rem;
-                color: #000;
-                border: 1px solid #000;
-                background-color: #fff;
+                border-width: .05rem;
+                border-style: solid;
             }
         }
     }
