--- a/styles/components/_back.scss
+++ b/styles/components/_back.scss
@@ -17,7 +17,7 @@
 
     &__icon {
         padding: 1rem;
-        padding-right: 2rem;
+        padding-right: 30%;
         position: absolute;
         left: 0;
     }
