--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,9 @@
+@charset "UTF-8";
+
 @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@400;
 
 600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Bitter:wght@400;500;600;700&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -293,10 +296,6 @@ h6 {
   background-color: inherit;
 }
 
-.app-touch-main .goods__see-all #see-all-goods {
-  color: #403777;
-}
-
 .app-touch-main .goods__wrap-scroll {
   background-color: inherit;
 }
@@ -353,6 +352,10 @@ h6 {
   color: #000;
 }
 
+.see-el span {
+  color: #403777;
+}
+
 html,
 body {
   overflow: hidden;
@@ -399,8 +402,18 @@ body {
 }
 
 .app-touch-title {
+  font-weight: 500;
+  font-family: 'Bitter', serif;
+}
+
+.app-touch-title_welcome {
+  font-size: 1.8rem;
+  line-height: 1.2;
+  font-weight: 500;
+}
+
+.app-touch-title_goods {
   font-size: 1.3rem;
-  font-weight: 700;
   height: 4rem;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -408,6 +421,36 @@ body {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
+}
+
+.app-touch-descr {
+  font-weight: 400;
+  color: #403777;
+}
+
+.app-touch-descr_welcome {
+  font-size: .8rem;
+}
+
+.see-el {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+  -ms-flex-pack: end;
+  justify-content: flex-end;
+}
+
+.see-el #see-all-goods {
+  font-size: 1rem;
+  font-weight: 600;
+  padding: 1rem 0;
+}
+
+.see-el #see-menu {
+  font-size: 1rem;
+  font-weight: 600;
+  padding: 1rem 0;
 }
 
 .app-touch-back {
@@ -434,7 +477,7 @@ body {
 
 .app-touch-back__icon {
   padding: 1rem;
-  padding-right: 2rem;
+  padding-right: 30%;
   position: absolute;
   left: 0;
 }
@@ -462,25 +505,127 @@ body {
   padding-right: 07%;
 }
 
-.app-touch-main__section_goods {
+.app-touch-main__section {
   width: 100%;
-  padding: 1rem;
-  padding-top: 0;
 }
 
-.app-touch-main .goods__see-all {
+.app-touch-main__section_goods {
+  padding: 0 1rem 1rem 1rem;
+}
+
+.app-touch-main__section_restaurants {
+  padding: 0 1rem 1rem 1rem;
+}
+
+.app-touch-main__welcome {
+  width: 100%;
+  height: 56vh;
+  position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
   -webkit-box-pack: end;
   -ms-flex-pack: end;
   justify-content: flex-end;
+  z-index: 1;
 }
 
-.app-touch-main .goods__see-all #see-all-goods {
-  font-size: 1rem;
-  font-weight: 600;
-  padding: 1rem 0;
+.app-touch-main__welcome-slider {
+  width: 100%;
+  height: 76%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: #2d2d2d;
+  z-index: 2;
+}
+
+.app-touch-main__welcome-content {
+  width: calc(100% - 2rem);
+  margin: 0 auto;
+  padding: 2rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  border-radius: 1rem;
+  height: 10rem;
+  background-color: #faf5f1;
+  -webkit-box-shadow: 0 .1rem .1rem #ccc;
+  box-shadow: 0 .1rem .1rem #ccc;
+  overflow: hidden;
+  position: relative;
+  z-index: 3;
+  position: relative;
+}
+
+.app-touch-main__welcome-content::after {
+  content: '';
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  width: 1rem;
+  height: 1rem;
+  border-radius: 50%;
+  border-width: .05rem;
+  border-style: solid;
+  border-color: #000;
+}
+
+.app-touch-main__welcome-content::before {
+  content: 'Сделай клик';
+  position: absolute;
+  top: 2.3rem;
+  right: 1rem;
+  font-size: .7rem;
+  color: #666;
+}
+
+.app-touch-main .welcome-slider__item {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.app-touch-main .welcome-slider__wrap-img {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+}
+
+.app-touch-main .welcome-slider__wrap-img img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+  object-fit: cover;
+  z-index: 2;
+}
+
+.app-touch-main .welcome-slider__wrap-img:after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.05);
+  z-index: 3;
 }
 
 .app-touch-main .goods__wrap-scroll {
@@ -644,6 +789,46 @@ body {
   -webkit-transition: all .2s ease 0s;
   -o-transition: all .2s ease 0s;
   transition: all .2s ease 0s;
+}
+
+.app-touch-main .restaurants__slider-btns {
+  display: none;
+}
+
+.app-touch-main .restaurants__slider-track {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.app-touch-main .restaurants__slider-item {
+  -webkit-box-flex: 0;
+  -ms-flex: 0 0 100%;
+  flex: 0 0 100%;
+  overflow: hidden;
+}
+
+.app-touch-main .restaurants__slider-item-wrap-img {
+  border-radius: 1rem;
+  overflow: hidden;
+  border: .05rem solid #ccc;
+}
+
+.app-touch-main .restaurants__slider-item-wrap-text {
+  padding: 1rem;
+  padding-left: .1rem;
+}
+
+.app-touch-main .restaurants__slider-item-name {
+  font-size: 1.2rem;
+}
+
+.app-touch-main .restaurants__slider-item-address {
+  font-size: .8rem;
+  line-height: 1.5;
+  font-weight: 400;
+  color: #adadad;
 }
 
 @-webkit-keyframes expectationLoading {
