--- a/styles/_fonts.scss
+++ b/styles/_fonts.scss
@@ -1,1 +1,2 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bitter:wght@400;500;600;700&display=swap');
