--- a/styles/components/_main.scss
+++ b/styles/components/_main.scss
@@ -14,27 +14,119 @@
     }
 
     &__section {
+        width: 100%;
+
+        &_welcome {}
+
         &_goods {
+            padding: 0 1rem 1rem 1rem;
+        }
+
+        &_restaurants {
+            padding: 0 1rem 1rem 1rem;
+        }
+    }
+
+    &__welcome {
+        width: 100%;
+        height: 56vh;
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+        z-index: 1;
+
+        &-slider {
             width: 100%;
-            padding: 1rem;
-            padding-top: 0;
+            height: 76%;
+            position: absolute;
+            top: 0;
+            left: 0;
+            background-color: #2d2d2d;
+            z-index: 2;
+        }
+
+        &-content {
+            width: calc(100% - 2rem);
+            margin: 0 auto;
+            padding: 2rem;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            border-radius: 1rem;
+            height: 10rem;
+            background-color: #faf5f1;
+            box-shadow: 0 .1rem .1rem #ccc;
+            overflow: hidden;
+            position: relative;
+            z-index: 3;
+            position: relative;
+
+            &::after {
+                content: '';
+                position: absolute;
+                top: 1rem;
+                right: 1rem;
+                width: 1rem;
+                height: 1rem;
+                border-radius: 50%;
+                border-width: .05rem;
+                border-style: solid;
+                border-color: #000;
+            }
+
+            &::before {
+                content: 'Сделай клик';
+                position: absolute;
+                top: 2.3rem;
+                right: 1rem;
+                font-size: .7rem;
+                color: #666;
+            }
+        }
+    }
+
+    .welcome-slider {
+        &__item {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+        }
+
+        &__wrap-img {
+            position: relative;
+            width: 100%;
+            height: 100%;
+            z-index: 1;
+
+            & img {
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                z-index: 2;
+            }
+
+            &:after {
+                content: '';
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                background-color: rgba(0, 0, 0, .05);
+                z-index: 3;
+            }
         }
     }
 
     &__goods {}
 
     & .goods {
-
-        &__see-all {
-            display: flex;
-            justify-content: flex-end;
-
-            & #see-all-goods {
-                font-size: 1rem;
-                font-weight: 600;
-                padding: 1rem 0;
-            }
-        }
 
         &__wrap-scroll {
             max-height: 28.75rem;
@@ -173,6 +265,53 @@
                     font-size: .8rem;
                     font-weight: 400;
                     transition: all .2s ease 0s;
+                }
+            }
+        }
+    }
+
+    &__restaurants {}
+
+    & .restaurants {
+        &__slider {
+            &-btns {
+                display: none;
+            }
+
+            &-track {
+                position: relative;
+
+                display: flex;
+            }
+
+            &-item {
+                flex: 0 0 100%;
+                overflow: hidden;
+
+                &-content {}
+
+                &-wrap-img {
+                    border-radius: 1rem;
+                    overflow: hidden;
+                    border: .05rem solid #ccc;
+                }
+
+                &-img {}
+
+                &-wrap-text {
+                    padding: 1rem;
+                    padding-left: .1rem;
+                }
+
+                &-name {
+                    font-size: 1.2rem;
+                }
+
+                &-address {
+                    font-size: .8rem;
+                    line-height: 1.5;
+                    font-weight: 400;
+                    color: #adadad;
                 }
             }
         }
