--- a/styles/content/_content.scss
+++ b/styles/content/_content.scss
@@ -1,7 +1,26 @@
 .app-touch-title {
-    font-size: 1.3rem;
-    font-weight: 700;
-    height: 4rem;
-    display: flex;
-    align-items: center;
+    font-weight: 500;
+    font-family: 'Bitter', serif;
+
+    &_welcome {
+        font-size: 1.8rem;
+        line-height: 1.2;
+        font-weight: 500;
+    }
+
+    &_goods {
+        font-size: 1.3rem;
+        height: 4rem;
+        display: flex;
+        align-items: center;
+    }
+}
+
+.app-touch-descr {
+    font-weight: 400;
+    color: #403777;
+
+    &_welcome {
+        font-size: .8rem;
+    }
 }
