--- a/styles/style.scss
+++ b/styles/style.scss
@@ -20,6 +20,7 @@
 @import './app';
 
 @import './content/content';
+@import './content/see';
 
 @import './components/back';
 @import './components/main';
