--- a/styles/content/_content.scss
+++ b/styles/content/_content.scss
@@ -8,7 +8,8 @@
         font-weight: 500;
     }
 
-    &_goods {
+    &_goods,
+    &_restaurants {
         font-size: 1.3rem;
         height: 4rem;
         display: flex;
