--- a/styles/components/_main.scss
+++ b/styles/components/_main.scss
@@ -42,7 +42,6 @@
             position: absolute;
             top: 0;
             left: 0;
-            background-color: #2d2d2d;
             z-index: 2;
         }
 
@@ -109,6 +108,12 @@
                 height: 100%;
                 object-fit: cover;
                 z-index: 2;
+                opacity: 0;
+                transition: all .3s ease 0s;
+
+                &.active {
+                    opacity: 1;
+                }
             }
 
             &:after {
