--- a/css/style.css
+++ b/css/style.css
@@ -863,6 +863,28 @@ body {
   color: #adadad;
 }
 
+.app-touch-main .restaurants__slider-dots {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.app-touch-main .restaurants__slider-dot {
+  width: .6rem;
+  height: .6rem;
+  background-color: transparent;
+  border: .05rem solid #ccc;
+  border-radius: 50%;
+  margin: 0 .2rem;
+}
+
 @-webkit-keyframes expectationLoading {
   0% {
 
