--- a/styles/components/_main.scss
+++ b/styles/components/_main.scss
@@ -341,6 +341,7 @@
                 display: flex;
                 justify-content: center;
                 align-items: center;
+                margin-top: 1rem;
             }
 
             &-dot {
