--- a/styles/content/_content.scss
+++ b/styles/content/_content.scss
@@ -11,9 +11,10 @@
     &_goods,
     &_restaurants {
         font-size: 1.3rem;
-        height: 4rem;
+        // height: 4rem;
         display: flex;
         align-items: center;
+        padding-top: 1rem;
     }
 }
 
