--- a/css/style.css
+++ b/css/style.css
@@ -802,6 +802,7 @@ body {
 
 .app-touch-main .restaurants__slider {
   position: relative;
+  margin-bottom: 20rem;
 }
 
 .app-touch-main .restaurants__slider-track {
@@ -879,12 +880,24 @@ body {
 }
 
 .app-touch-main .restaurants__slider-dot {
-  width: .6rem;
-  height: .6rem;
-  background-color: transparent;
-  border: .05rem solid #ccc;
+  width: .5rem;
+  height: .5rem;
+  background-color: #f2f2f2;
   border-radius: 50%;
-  margin: 0 .2rem;
+  margin: 0 .25rem;
+  position: relative;
+  -webkit-transition: background-color .3s ease 0s, -webkit-transform .2s ease 0s;
+  transition: background-color .3s ease 0s, -webkit-transform .2s ease 0s;
+  -o-transition: background-color .3s ease 0s, transform .2s ease 0s;
+  transition: background-color .3s ease 0s, transform .2s ease 0s;
+  transition: background-color .3s ease 0s, transform .2s ease 0s, -webkit-transform .2s ease 0s;
+}
+
+.app-touch-main .restaurants__slider-dot.active {
+  -webkit-transform: scale(1.3);
+  -ms-transform: scale(1.3);
+  transform: scale(1.3);
+  background-color: #bebebe;
 }
 
 @-webkit-keyframes expectationLoading {
