--- a/styles/components/_main.scss
+++ b/styles/components/_main.scss
@@ -280,6 +280,7 @@
     & .restaurants {
         &__slider {
             position: relative;
+            margin-bottom: 20rem;
 
             &-track {
                 position: relative;
@@ -345,12 +346,19 @@
             }
 
             &-dot {
-                width: .6rem;
-                height: .6rem;
-                background-color: transparent;
-                border: .05rem solid #ccc;
+                width: .5rem;
+                height: .5rem;
+                background-color: #f2f2f2;
                 border-radius: 50%;
-                margin: 0 .2rem;
+                margin: 0 .25rem;
+                position: relative;
+
+                transition: background-color .3s ease 0s, transform .2s ease 0s;
+
+                &.active {
+                    transform: scale(1.3);
+                    background-color: #bebebe;
+                }
             }
         }
     }
