--- a/styles/style.scss
+++ b/styles/style.scss
@@ -26,5 +26,6 @@
 @import './components/main';
 @import './components/goods';
 @import './components/form';
+@import './components/watch-menu';
 
 @import './settings/active-el';
