--- a/css/style.css
+++ b/css/style.css
@@ -127,6 +127,10 @@ h6 {
   z-index: 1005;
 }
 
+.app-touch-watch-menu {
+  z-index: 999;
+}
+
 .app-touch {
   background-color: #fff;
 }
@@ -464,6 +468,12 @@ body {
   height: 4rem;
 }
 
+.app-touch-back.blur {
+  background-color: rgba(255, 255, 255, 0.3);
+  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px);
+}
+
 .app-touch-back__wrap {
   width: 100%;
   height: 100%;
@@ -505,6 +515,10 @@ body {
   overflow-y: auto;
   overflow-x: hidden;
   padding-right: 07%;
+}
+
+.app-touch-main__scroll.overflow {
+  overflow: hidden;
 }
 
 .app-touch-main__section {
@@ -1437,4 +1451,130 @@ body {
   border-radius: 5rem;
   border-width: .05rem;
   border-style: solid;
+}
+
+.app-touch-watch-menu {
+  -webkit-box-flex: 0;
+  -ms-flex: 0 0 100%;
+  flex: 0 0 100%;
+  width: 100%;
+  position: absolute;
+  height: 100%;
+  overflow: hidden;
+  background-color: #fff;
+  opacity: 0;
+  visibility: hidden;
+  -webkit-transition: all .3s ease 0s;
+  -o-transition: all .3s ease 0s;
+  transition: all .3s ease 0s;
+}
+
+.app-touch-watch-menu.active {
+  opacity: 1;
+  visibility: visible;
+}
+
+.app-touch-watch-menu__scroll {
+  width: 107%;
+  height: 100%;
+  overflow-y: auto;
+  overflow-x: hidden;
+  padding-right: 07%;
+}
+
+.app-touch-watch-menu__wrap-items {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: .5rem;
+  padding: 4rem 1rem 1rem 1rem;
+}
+
+.app-touch-watch-menu__open-img {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 20;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.8);
+  opacity: 0;
+  visibility: hidden;
+  -webkit-transition: all .3s ease 0s;
+  -o-transition: all .3s ease 0s;
+  transition: all .3s ease 0s;
+}
+
+.app-touch-watch-menu__open-img img {
+  max-width: calc(100% - 2rem);
+  border-radius: 1rem;
+}
+
+.app-touch-watch-menu__open-img.active {
+  opacity: 1;
+  visibility: visible;
+}
+
+.app-touch-watch-menu .item {
+  width: 100%;
+  height: auto;
+  border: 0.05rem solid #f2f2f2;
+  border-radius: 1rem;
+  overflow: hidden;
+}
+
+.app-touch-watch-menu .item__wrap {
+  width: 100%;
+  padding-bottom: 100%;
+  position: relative;
+  overflow: hidden;
+  z-index: 1;
+  border-radius: 1rem;
+}
+
+.app-touch-watch-menu .item__wrap-img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  z-index: 2;
+}
+
+.app-touch-watch-menu .item__img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+  object-fit: cover;
+  opacity: 0;
+  -webkit-transition: all .3s ease 0s;
+  -o-transition: all .3s ease 0s;
+  transition: all .3s ease 0s;
+}
+
+.app-touch-watch-menu .item__img.active {
+  opacity: 1;
+}
+
+.app-touch-watch-menu .item__pepper {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 3;
 }
