--- a/styles/components/_back.scss
+++ b/styles/components/_back.scss
@@ -6,6 +6,11 @@
     width: 100%;
     height: 4rem;
 
+    &.blur {
+        background-color: rgba(255, 255, 255, 0.3);
+        backdrop-filter: blur(10px);
+    }
+
     &__wrap {
         width: 100%;
         height: 100%;
