--- a/styles/components/_back.scss
+++ b/styles/components/_back.scss
@@ -6,11 +6,6 @@
     width: 100%;
     height: 4rem;
 
-    &.blur {
-        background-color: rgba(255, 255, 255, 0.3);
-        backdrop-filter: blur(10px);
-    }
-
     &__wrap {
         width: 100%;
         height: 100%;
@@ -30,5 +25,19 @@
     &__title {
         font-size: 1.1rem;
         margin-left: 1.5rem;
+    }
+
+    &.menu {
+        background-color: rgba(255, 255, 255, .3);
+
+        .app-touch-back {
+            &__wrap {
+                padding: 0 2rem;
+            }
+
+            &__icon {
+                left: 1rem;
+            }
+        }
     }
 }
