--- a/styles/components/_watch-menu.scss
+++ b/styles/components/_watch-menu.scss
@@ -25,77 +25,40 @@
 
     &__wrap-items {
         display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-columns: 1fr;
         grid-gap: .5rem;
-        padding: 4rem 1rem 1rem 1rem;
-    }
-
-    &__open-img {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        z-index: 20;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        background-color: rgba(0, 0, 0, .8);
-
-        & img {
-            max-width: calc(100% - 2rem);
-            border-radius: 1rem;
-        }
-
-        opacity: 0;
-        visibility: hidden;
-        transition: all .3s ease 0s;
-
-        &.active {
-            opacity: 1;
-            visibility: visible;
-        }
+        padding: 5rem 1rem 1rem 1rem;
     }
 
     & .item {
         width: 100%;
-        height: auto;
         border: .05rem solid rgb(242, 242, 242);
         border-radius: 1rem;
         overflow: hidden;
 
         &__wrap {
             width: 100%;
-            padding-bottom: 100%;
+            min-height: 15rem;
             position: relative;
-            overflow: hidden;
-            z-index: 1;
-            border-radius: 1rem;
+            border-radius: inherit;
         }
 
         &__wrap-img {
-            position: absolute;
-            top: 0;
-            left: 0;
             width: 100%;
-            height: 100%;
-            overflow: hidden;
-            z-index: 2;
+            border-radius: inherit;
         }
 
         &__img {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
+            max-width: 100%;
             opacity: 0;
+            border-radius: inherit;
             transition: all .3s ease 0s;
 
             &.active {
                 opacity: 1;
             }
+
+
         }
 
         &__pepper {
@@ -104,7 +67,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            z-index: 3;
+            background-color: transparent;
         }
     }
 }
